--- a/index.html
+++ b/index.html
@@ -1,36 +1,48 @@
-<html>
-    <head>
-    </head>
-    <body>
-        <ul id="categories">
-            <li class="item">
-              <h2>Animals</h2>
-              <ul>
-                <li>Cat</li>
-                <li>Hamster</li>
-                <li>Horse</li>
-                <li>Parrot</li>
-              </ul>
-            </li>
-            <li class="item">
-              <h2>Products</h2>
-              <ul>
-                <li>Bread</li>
-                <li>Prasley</li>
-                <li>Cheese</li>
-              </ul>
-            </li>
-            <li class="item">
-              <h2>Technologies</h2>
-              <ul>
-                <li>HTML</li>
-                <li>CSS</li>
-                <li>JavaScript</li>
-                <li>React</li>
-                <li>Node.js</li>
-              </ul>
-            </li>
-          </ul>
-          
-    </body>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Homework JS 6</title>
+    <meta name="description" content="Homework JS 6" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="css/styles.css" />
+  </head>
+  <body>
+    <ul id="categories">
+      <li class="item">
+        <h2>Animals</h2>
+        <ul>
+          <li>Cat</li>
+          <li>Hamster</li>
+          <li>Horse</li>
+          <li>Parrot</li>
+        </ul>
+      </li>
+      <li class="item">
+        <h2>Products</h2>
+        <ul>
+          <li>Bread</li>
+          <li>Prasley</li>
+          <li>Cheese</li>
+        </ul>
+      </li>
+      <li class="item">
+        <h2>Technologies</h2>
+        <ul>
+          <li>HTML</li>
+          <li>CSS</li>
+          <li>JavaScript</li>
+          <li>React</li>
+          <li>Node.js</li>
+        </ul>
+      </li>
+    </ul>
+  </body>
 </html>
