--- a/taskTwo.html
+++ b/taskTwo.html
@@ -27,24 +27,37 @@
             <li>
               <a class="nav-page_link" href="./taskTwo.html">Second task</a>
             </li>
-            <li><a class="nav-page_link" href="./taskThree.html">Third task</a></li>
+            <li>
+              <a class="nav-page_link" href="./taskThree.html">Third task</a>
+            </li>
             <li>
               <a class="nav-page_link" href="./taskFour.html">Fourth task</a>
             </li>
-            <li><a class="nav-page_link" href="./taskFive.html">Fifth task</a></li>
-            <li><a class="nav-page_link" href="./taskSix.html">Sixth task</a></li>
+            <li>
+              <a class="nav-page_link" href="./taskFive.html">Fifth task</a>
+            </li>
+            <li>
+              <a class="nav-page_link" href="./taskSix.html">Sixth task</a>
+            </li>
             <li>
               <a class="nav-page_link" href="./taskSeven.html">Seventh task</a>
             </li>
-            <li><a class="nav-page_link" href="./taskEight.html">Eighth task</a></li>
-            <li><a class="nav-page_link" href="./taskNine.html">Ninth task</a></li>
-            <li><a class="nav-page_link" href="./taskTen.html">Tenth task</a></li>
+            <li>
+              <a class="nav-page_link" href="./taskEight.html">Eighth task</a>
+            </li>
+            <li>
+              <a class="nav-page_link" href="./taskNine.html">Ninth task</a>
+            </li>
+            <li>
+              <a class="nav-page_link" href="./taskTen.html">Tenth task</a>
+            </li>
           </ul>
         </nav>
       </section>
     </header>
     <main>
-      <h1 class="main-title">JavaScript Homework Number One</h1>
+      <ul id="ingredients"></ul>
     </main>
+    <script src="./js/taskTwo.js"></script>
   </body>
 </html>
