finish task three

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   </head>
   <body>
     <header>
-      <section class="page-header">
+      <section class="page-header container">
         <h3 class="title">JavaScript Homework One</h3>
         <nav class="nav-page">
           <ul class="nav-page_list">
@@ -27,18 +27,30 @@
             <li>
               <a class="nav-page_link" href="./taskTwo.html">Second task</a>
             </li>
-            <li><a class="nav-page_link" href="./taskThree.html">Third task</a></li>
+            <li>
+              <a class="nav-page_link" href="./taskThree.html">Third task</a>
+            </li>
             <li>
               <a class="nav-page_link" href="./taskFour.html">Fourth task</a>
             </li>
-            <li><a class="nav-page_link" href="./taskFive.html">Fifth task</a></li>
-            <li><a class="nav-page_link" href="./taskSix.html">Sixth task</a></li>
+            <li>
+              <a class="nav-page_link" href="./taskFive.html">Fifth task</a>
+            </li>
+            <li>
+              <a class="nav-page_link" href="./taskSix.html">Sixth task</a>
+            </li>
             <li>
               <a class="nav-page_link" href="./taskSeven.html">Seventh task</a>
             </li>
-            <li><a class="nav-page_link" href="./taskEight.html">Eighth task</a></li>
-            <li><a class="nav-page_link" href="./taskNine.html">Ninth task</a></li>
-            <li><a class="nav-page_link" href="./taskTen.html">Tenth task</a></li>
+            <li>
+              <a class="nav-page_link" href="./taskEight.html">Eighth task</a>
+            </li>
+            <li>
+              <a class="nav-page_link" href="./taskNine.html">Ninth task</a>
+            </li>
+            <li>
+              <a class="nav-page_link" href="./taskTen.html">Tenth task</a>
+            </li>
           </ul>
         </nav>
       </section>
@@ -46,5 +58,6 @@
     <main>
       <h1 class="main-title">JavaScript Homework Number One</h1>
     </main>
+    <!-- <script src="./js/taskTwo.js"></script> -->
   </body>
 </html>
