--- a/taskThree.html
+++ b/taskThree.html
@@ -55,9 +55,7 @@
         </nav>
       </section>
     </header>
-    <main>
-      <ul id="ingredients"></ul>
-    </main>
-    <script src="./js/taskTwo.js"></script>
+    <main><ul class="gallery container"></ul></main>
+    <script src="./js/taskThree.js"></script>
   </body>
 </html>
