--- a/index.html
+++ b/index.html
@@ -48,15 +48,17 @@
             <li>
               <a class="nav-page_link" href="./taskNine.html">Ninth task</a>
             </li>
-            <li>
+            <!-- <li>
               <a class="nav-page_link" href="./taskTen.html">Tenth task</a>
-            </li>
+            </li> -->
           </ul>
         </nav>
       </section>
     </header>
     <main>
-      <h1 class="main-title">JavaScript Homework Number One</h1>
+      <section class="box">
+        <h1 class="main-title">JavaScript Homework Number One</h1>
+      </section>
     </main>
     <!-- <script src="./js/taskTwo.js"></script> -->
   </body>
