--- a/taskFive.html
+++ b/taskFive.html
@@ -48,16 +48,22 @@
             <li>
               <a class="nav-page_link" href="./taskNine.html">Ninth task</a>
             </li>
-            <li>
+            <!-- <li>
               <a class="nav-page_link" href="./taskTen.html">Tenth task</a>
-            </li>
+            </li> -->
           </ul>
         </nav>
       </section>
     </header>
     <main>
-      <input type="text" id="name-input" placeholder="Please enter your name" />
-      <h1>Hello, <span id="name-output">Anonymous</span>!</h1>
+      <section class="box">
+        <input
+          type="text"
+          id="name-input"
+          placeholder="Please enter your name"
+        />
+        <h1>Hello, <span id="name-output">Anonymous</span>!</h1>
+      </section>
     </main>
     <script src="./js/taskFive.js"></script>
   </body>
