--- a/taskOne.html
+++ b/taskOne.html
@@ -48,43 +48,45 @@
             <li>
               <a class="nav-page_link" href="./taskNine.html">Ninth task</a>
             </li>
-            <li>
+            <!-- <li>
               <a class="nav-page_link" href="./taskTen.html">Tenth task</a>
-            </li>
+            </li> -->
           </ul>
         </nav>
       </section>
     </header>
     <main>
-      <ul id="categories">
-        <li class="item">
-          <h2>Animals</h2>
-          <ul>
-            <li>Cat</li>
-            <li>Hamster</li>
-            <li>Horse</li>
-            <li>Parrot</li>
-          </ul>
-        </li>
-        <li class="item">
-          <h2>Products</h2>
-          <ul>
-            <li>Bread</li>
-            <li>Prasley</li>
-            <li>Cheese</li>
-          </ul>
-        </li>
-        <li class="item">
-          <h2>Technologies</h2>
-          <ul>
-            <li>HTML</li>
-            <li>CSS</li>
-            <li>JavaScript</li>
-            <li>React</li>
-            <li>Node.js</li>
-          </ul>
-        </li>
-      </ul>
+      <section class="box">
+        <ul id="categories">
+          <li class="item">
+            <h2>Animals</h2>
+            <ul>
+              <li>Cat</li>
+              <li>Hamster</li>
+              <li>Horse</li>
+              <li>Parrot</li>
+            </ul>
+          </li>
+          <li class="item">
+            <h2>Products</h2>
+            <ul>
+              <li>Bread</li>
+              <li>Prasley</li>
+              <li>Cheese</li>
+            </ul>
+          </li>
+          <li class="item">
+            <h2>Technologies</h2>
+            <ul>
+              <li>HTML</li>
+              <li>CSS</li>
+              <li>JavaScript</li>
+              <li>React</li>
+              <li>Node.js</li>
+            </ul>
+          </li>
+        </ul>
+      </section>
     </main>
     <script src="./js/taskOne.js"></script>
   </body>
