--- a/taskThree.html
+++ b/taskThree.html
@@ -48,14 +48,16 @@
             <li>
               <a class="nav-page_link" href="./taskNine.html">Ninth task</a>
             </li>
-            <li>
+            <!-- <li>
               <a class="nav-page_link" href="./taskTen.html">Tenth task</a>
-            </li>
+            </li> -->
           </ul>
         </nav>
       </section>
     </header>
-    <main><ul class="gallery container"></ul></main>
+    <main>
+      <section class="box"><ul class="gallery container"></ul></section>
+    </main>
     <script src="./js/taskThree.js"></script>
   </body>
 </html>
