--- a/taskFour.html
+++ b/taskFour.html
@@ -48,19 +48,21 @@
             <li>
               <a class="nav-page_link" href="./taskNine.html">Ninth task</a>
             </li>
-            <li>
+            <!-- <li>
               <a class="nav-page_link" href="./taskTen.html">Tenth task</a>
-            </li>
+            </li> -->
           </ul>
         </nav>
       </section>
     </header>
     <main>
-      <div id="counter" class="container">
-        <button type="button" data-action="decrement">-1</button>
-        <span id="value">0</span>
-        <button type="button" data-action="increment">+1</button>
-      </div>
+      <section class="box">
+        <div id="counter" class="container">
+          <button type="button" data-action="decrement">-1</button>
+          <span id="value">0</span>
+          <button type="button" data-action="increment">+1</button>
+        </div>
+      </section>
     </main>
     <script src="./js/taskFour.js"></script>
   </body>
