--- a/taskSeven.html
+++ b/taskSeven.html
@@ -57,14 +57,11 @@
     </header>
     <main>
       <section class="box">
-        <input
-          type="text"
-          id="validation-input"
-          data-length="6"
-          placeholder="Please enter 6 symbols"
-        />
+        <input id="font-size-control" type="range" min="16" max="96" />
+        <br />
+        <span id="text">Abracadabra!</span>
       </section>
     </main>
-    <script src="./js/taskSix.js"></script>
+    <script src="./js/taskSeven.js"></script>
   </body>
 </html>
