--- a/taskTwo.html
+++ b/taskTwo.html
@@ -48,15 +48,17 @@
             <li>
               <a class="nav-page_link" href="./taskNine.html">Ninth task</a>
             </li>
-            <li>
+            <!-- <li>
               <a class="nav-page_link" href="./taskTen.html">Tenth task</a>
-            </li>
+            </li> -->
           </ul>
         </nav>
       </section>
     </header>
     <main>
-      <ul id="ingredients"></ul>
+      <section class="box">
+        <ul id="ingredients"></ul>
+      </section>
     </main>
     <script src="./js/taskTwo.js"></script>
   </body>
