--- a/taskEight.html
+++ b/taskEight.html
@@ -70,6 +70,6 @@
         </form>
       </section>
     </main>
-    <!-- <script src="./js/taskTwo.js"></script> -->
+    <script src="./js/taskEight.js"></script>
   </body>
 </html>
